--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div id="users" class="user container">
+<div class="row">
+      <h1 class="appname col-12"> Budget App </h1>
+      <div class="signin col-12"> <strong> <%= link_to 'Sign In', new_user_session_path %> </strong> </div>
+      <div class="signout col-12"> <strong> <%= link_to 'Sign Up', new_user_registration_path %> </strong> </div>
+</div>
+</div>
