--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+ * {
+    margin: 0;
+    padding: 0;
+  }
+  body {
+    background-color: #ebebeb;
+  }
+  .back-primary {
+    background-color: #3778c2 !important;
+  }
+  .back-secondary {
+    background-color: #434b54;
+  }
+
+  .back-green {
+    background-color: #5fb523;
