--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,4 +31,6 @@
     <%= f.submit "Sign up", class: "btn btn-primary" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="d-flex justify-content-center">
+  <%= render "devise/shared/links" %>
+</div>
