--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
   </head>
 
   <body>
-    <%= render partial: "shared/navbar"%>
-    <%= render partial: "shared/flash"%>
+     <%= render partial: "shared/navbar" %>
+    <div class="container">
+    <%= render partial: "shared/flash" %>
     <%= yield %>
+    </div>
   </body>
 </html>
