--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
         <div class="card_info">
           <div>
             <%= link_to category.name, category_records_path(category) %>
-            <%= button_to "Delete", category_path(category), method: :delete, class: "btn btn-danger" %>
+            <%= button_to "Delete", categories_path(category), method: :delete, class: "btn btn-danger" %>
           </div>
           <span class="text-muted"><%= l category.created_at.to_date, format: :long %></span>
         </div>
