--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,10 +1,10 @@
 <section>
   <div class="d-flex align-items-center justify-content-around my-4">
-    <%= link_to "Back", category_index_path, class: "btn btn-secondary" %>
+    <%= link_to "Back", categories_path, class: "btn btn-secondary" %>
     <h3>New Category</h3>
     <i></i>
   </div>
-  <%= form_with model: @category, url: category_index_path, method: :post do |f| %>
+  <%= form_with model: @category, url: categories_path, method: :post do |f| %>
     <div class="mb-3">
       <%= f.label :name, class: "form-label" %><br />
          <%= f.text_field :name, class: "form-control" %>
